--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,14 @@ java {
 	}
 }
 
+jar {
+	manifest {
+		attributes(
+				'Main-Class': 'pieritz.prince.championsoftheworld.ChampionsOfTheWorldApplicationRuntime'
+		)
+	}
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -27,6 +35,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
