--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=Champions-of-the-world
+
+# Datenbankkonfiguration
+spring.datasource.url=jdbc:mysql://localhost:3307/webappdb
+spring.datasource.username=user1
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate-Eigenschaften
+spring.jpa.database-platform= org.hibernate.dialect.MySQL8InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+# Server-Konfiguration
+server.port=8080
+
+# Api Docs
+springdoc.api-docs.path=/api-docs
