--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,15 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
+	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+
+	runtimeOnly 'com.h2database:h2'
+
+	testImplementation 'org.mockito:mockito-core:4.0.0'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mockito:mockito-junit-jupiter:4.0.0'
+
 }
 
 tasks.named('test') {
