--- a/build.gradle
+++ b/build.gradle
@@ -15,13 +15,11 @@ java {
 
 jar {
 	manifest {
-		attributes 'Main-Class': 'pieritz.prince.Champions.of.the.world.ChampionsOfTheWorldApplication'
-	}
-	from {
-		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+		attributes(
+				'Main-Class': 'pieritz.prince.Champions.of.the.world.ChampionsOfTheWorldApplication'
+		)
 	}
 }
-
 
 configurations {
 	compileOnly {
