--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql:${STACKHERO_MYSQL_DATABASE_URL}
-spring.datasource.username=${PROD_DB_USERNAME}
-spring.datasource.password=${PROD_DB_PASSWORD}
+spring.datasource.url=${CLEARDB_OLIVE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
