--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Gradle related files
 **/.gradle/*
-**Docker-Message**/build/*
-!**/build/libs
+
 
 # IntelliJ IDEA files
 .idea/
@@ -50,7 +49,9 @@ target/
 /dist/
 /nbdist/
 /.nb-gradle/
-
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
 ### VS Code ###
 .vscode/
