--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,6 @@ logs/
 *.class
 
 # Package files
-*.jar
 *.war
 *.ear
 
@@ -49,7 +48,7 @@ target/
 /dist/
 /nbdist/
 /.nb-gradle/
-
+build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
