--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,5 @@
-spring.datasource.url=${CLEARDB_DATABASE_URL}
+spring.datasource.url=jdbc:${CLEARDB_DATABASE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
-#
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
