--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,11 +13,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
+spring.data.rest.base-path=
+
+springdoc.swagger-ui.path=/api-docs
+
 # Server-Konfiguration
 server.port=8081
 
-# Api Docs
-springdoc.api-docs.path=/api-docs
-
 // use profile
-spring.profiles.active=prod
+# spring.profiles.active=prod
