fix: findBySeason Method and Tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,5 @@ springdoc.swagger-ui.path=/api-docs
 # Server-Konfiguration
 server.port=8081
 
-// use profile
+# use profile
 # spring.profiles.active=prod
