fix: findBySeason Method and Tests

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=${CLEARDB_DATABASE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:${STACKHERO_MYSQL_DATABASE_URL}
+spring.datasource.username=root
+spring.datasource.password=${STACKHERO_MYSQL_ROOT_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
