--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:${STACKHERO_MYSQL_DATABASE_URL}
+spring.datasource.url=jdbc:mysql://${STACKHERO_MYSQL_HOST}:${STACKHERO_MYSQL_PORT}/root?useSSL=true&requireSSL=true
 spring.datasource.username=root
 spring.datasource.password=${STACKHERO_MYSQL_ROOT_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
