--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://${STACKHERO_MYSQL_HOST}:${STACKHERO_MYSQL_PORT}/root?useSSL=true&requireSSL=true
-spring.datasource.username=root
-spring.datasource.password=${STACKHERO_MYSQL_ROOT_PASSWORD}
+spring.datasource.url=jdbc:${JAWSDB_URL}
+spring.datasource.username=${JAWSDB_USERNAME}
+spring.datasource.password=${JAWSDB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
