--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,3 +3,7 @@ spring.datasource.username=${JAWSDB_USERNAME}
 spring.datasource.password=${JAWSDB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
+spring.datasource.platform=mysql
