fix: remove data.sql

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,6 +7,5 @@ spring.h2.console.enabled=true
 
 # Hibernate Konfiguration für H2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.initialization-mode=never
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
