--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,5 @@
-spring.datasource.url=jdbc:${JAWSDB_URL}
-spring.datasource.username=${JAWSDB_USERNAME}
-spring.datasource.password=${JAWSDB_PASSWORD}
+spring.datasource.url=jdbc:${CLEARDB_DATABASE_URL}
+spring.datasource.username=${CLEARDB_DATABASE_USERNAME}
+spring.datasource.password=${CLEARDB_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
