--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,6 +7,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.hbm2ddl.import_files=data.sql
