--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,12 +1,12 @@
-spring.datasource.url=jdbc:${JAWSDB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:${CLEARDB_DATABASE_URL}
+spring.datasource.username=${CLEARDB_DATABASE_USERNAME}
+spring.datasource.password=${CLEARDB_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.hbm2ddl.import_files=data.sql
