feat: stackhero database

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:${CLEARDB_DATABASE_URL}
-spring.datasource.username=${CLEARDB_DATABASE_USERNAME}
-spring.datasource.password=${CLEARDB_DATABASE_PASSWORD}
+spring.datasource.url=jdbc:${STACKHERO_MYSQL_DATABASE_URL}
+spring.datasource.username=${STACKHERO_MYSQL_USERNAME}
+spring.datasource.password=${STACKHERO_MYSQL_ROOT_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
