--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:${STACKHERO_MYSQL_DATABASE_URL}
-spring.datasource.username=${STACKHERO_MYSQL_USERNAME}
-spring.datasource.password=${STACKHERO_MYSQL_ROOT_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# Datenbankkonfiguration
+spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
